objects/SBQQ__AttributeValue__c.object
<CustomObject>
    <description>Stores product attribute values.</description>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__FavoriteProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Favorite Product</label>
        <referenceTo>SBQQ__FavoriteProduct__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ValueDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (Date Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__ValueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ValueNumber__c</fullName>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>